// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch get post archive 1`] = `
Array [
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 1,
        "search": undefined,
      },
    },
  ],
]
`;

exports[`fetch get post archive 2`] = `
Object {
  "/": Object {
    "isArchive": true,
    "isFetching": false,
    "isHome": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": true,
    "pages": Array [
      Array [
        Object {
          "id": 1801,
          "link": "https://test.frontity.io/2018/block-image/",
          "type": "post",
        },
        Object {
          "id": 1798,
          "link": "https://test.frontity.io/2018/block-button/",
          "type": "post",
        },
        Object {
          "id": 1797,
          "link": "https://test.frontity.io/2018/block-cover/",
          "type": "post",
        },
        Object {
          "id": 1796,
          "link": "https://test.frontity.io/2018/column-blocks/",
          "type": "post",
        },
        Object {
          "id": 1800,
          "link": "https://test.frontity.io/2018/block-gallery/",
          "type": "post",
        },
        Object {
          "id": 1799,
          "link": "https://test.frontity.io/2018/block-quotes/",
          "type": "post",
        },
        Object {
          "id": 1786,
          "link": "https://test.frontity.io/2018/block-category-common/",
          "type": "post",
        },
        Object {
          "id": 1789,
          "link": "https://test.frontity.io/2018/blocks-embeds/",
          "type": "post",
        },
        Object {
          "id": 1795,
          "link": "https://test.frontity.io/2018/blocks-widgets/",
          "type": "post",
        },
        Object {
          "id": 1788,
          "link": "https://test.frontity.io/2018/blocks-layout-elements/",
          "type": "post",
        },
      ],
    ],
    "total": 64,
    "totalPages": 7,
    "type": "post",
  },
}
`;

exports[`fetch get post archive 3`] = `
Array [
  Object {
    "id": 1786,
    "link": "https://test.frontity.io/2018/block-category-common/",
    "slug": "block-category-common",
  },
  Object {
    "id": 1788,
    "link": "https://test.frontity.io/2018/blocks-layout-elements/",
    "slug": "blocks-layout-elements",
  },
  Object {
    "id": 1789,
    "link": "https://test.frontity.io/2018/blocks-embeds/",
    "slug": "blocks-embeds",
  },
  Object {
    "id": 1795,
    "link": "https://test.frontity.io/2018/blocks-widgets/",
    "slug": "blocks-widgets",
  },
  Object {
    "id": 1796,
    "link": "https://test.frontity.io/2018/column-blocks/",
    "slug": "column-blocks",
  },
  Object {
    "id": 1797,
    "link": "https://test.frontity.io/2018/block-cover/",
    "slug": "block-cover",
  },
  Object {
    "id": 1798,
    "link": "https://test.frontity.io/2018/block-button/",
    "slug": "block-button",
  },
  Object {
    "id": 1799,
    "link": "https://test.frontity.io/2018/block-quotes/",
    "slug": "block-quotes",
  },
  Object {
    "id": 1800,
    "link": "https://test.frontity.io/2018/block-gallery/",
    "slug": "block-gallery",
  },
  Object {
    "id": 1801,
    "link": "https://test.frontity.io/2018/block-image/",
    "slug": "block-image",
  },
]
`;

exports[`fetch get post archive 4`] = `
Array [
  Object {
    "id": 66,
    "link": "https://test.frontity.io/category/block/",
    "slug": "block",
  },
  Object {
    "id": 92,
    "link": "https://test.frontity.io/category/media-2/",
    "slug": "media-2",
  },
]
`;

exports[`fetch get post archive 5`] = `
Array [
  Object {
    "id": 150,
    "link": "https://test.frontity.io/tag/embeds-2/",
    "slug": "embeds-2",
  },
  Object {
    "id": 162,
    "link": "https://test.frontity.io/tag/gallery/",
    "slug": "gallery",
  },
  Object {
    "id": 169,
    "link": "https://test.frontity.io/tag/image/",
    "slug": "image",
  },
  Object {
    "id": 233,
    "link": "https://test.frontity.io/tag/video/",
    "slug": "video",
  },
  Object {
    "id": 253,
    "link": "https://test.frontity.io/tag/columns/",
    "slug": "columns",
  },
]
`;

exports[`fetch get post archive 6`] = `
Array [
  Object {
    "id": 6,
    "link": "https://test.frontity.io/author/themereviewteam/",
    "slug": "themereviewteam",
  },
]
`;

exports[`fetch get post archive 7`] = `
Array [
  Object {
    "id": 611,
    "link": "https://test.frontity.io/2010/post-format-gallery/canola2/",
    "slug": "canola2",
  },
  Object {
    "id": 616,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20050727_091048_222/",
    "slug": "dsc20050727_091048_222",
  },
  Object {
    "id": 617,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20050813_115856_52/",
    "slug": "dsc20050813_115856_52",
  },
  Object {
    "id": 754,
    "link": "https://test.frontity.io/2010/post-format-gallery/100_5478/",
    "slug": "100_5478",
  },
  Object {
    "id": 755,
    "link": "https://test.frontity.io/2010/post-format-gallery/100_5540/",
    "slug": "100_5540",
  },
  Object {
    "id": 756,
    "link": "https://test.frontity.io/2010/post-format-gallery/cep00032/",
    "slug": "cep00032",
  },
  Object {
    "id": 757,
    "link": "https://test.frontity.io/2010/post-format-gallery/dcp_2082/",
    "slug": "dcp_2082",
  },
  Object {
    "id": 758,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc03149/",
    "slug": "dsc03149",
  },
  Object {
    "id": 759,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc04563/",
    "slug": "dsc04563",
  },
  Object {
    "id": 760,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc09114/",
    "slug": "dsc09114",
  },
  Object {
    "id": 761,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20050102_192118_51/",
    "slug": "dsc20050102_192118_51",
  },
  Object {
    "id": 762,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20051220_160808_102/",
    "slug": "dsc20051220_160808_102",
  },
  Object {
    "id": 763,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc02085/",
    "slug": "dsc02085",
  },
  Object {
    "id": 764,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20051220_173257_119/",
    "slug": "dsc20051220_173257_119",
  },
  Object {
    "id": 765,
    "link": "https://test.frontity.io/2010/post-format-gallery/dscn3316/",
    "slug": "dscn3316",
  },
  Object {
    "id": 766,
    "link": "https://test.frontity.io/2010/post-format-gallery/michelle_049/",
    "slug": "michelle_049",
  },
  Object {
    "id": 767,
    "link": "https://test.frontity.io/2010/post-format-gallery/dcf-1-0/",
    "slug": "dcf-1-0",
  },
  Object {
    "id": 768,
    "link": "https://test.frontity.io/2010/post-format-gallery/alas-i-have-found-my-shangri-la/",
    "slug": "alas-i-have-found-my-shangri-la",
  },
  Object {
    "id": 769,
    "link": "https://test.frontity.io/2010/post-format-gallery/img_0747/",
    "slug": "img_0747",
  },
  Object {
    "id": 770,
    "link": "https://test.frontity.io/2010/post-format-gallery/img_0767/",
    "slug": "img_0767",
  },
  Object {
    "id": 807,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20040724_152504_532-2/",
    "slug": "dsc20040724_152504_532-2",
  },
  Object {
    "id": 811,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20050604_133440_3421/",
    "slug": "dsc20050604_133440_3421",
  },
  Object {
    "id": 827,
    "link": "https://test.frontity.io/about/clearing-floats/olympus-digital-camera/",
    "slug": "olympus-digital-camera",
  },
  Object {
    "id": 967,
    "link": "https://test.frontity.io/2013/markup-image-alignment/image-alignment-580x300/",
    "slug": "image-alignment-580x300",
  },
  Object {
    "id": 968,
    "link": "https://test.frontity.io/2013/markup-image-alignment/image-alignment-150x150/",
    "slug": "image-alignment-150x150",
  },
  Object {
    "id": 1022,
    "link": "https://test.frontity.io/2012/template-featured-image-horizontal/featured-image-horizontal-2/",
    "slug": "featured-image-horizontal-2",
  },
  Object {
    "id": 1025,
    "link": "https://test.frontity.io/2013/markup-image-alignment/image-alignment-300x200/",
    "slug": "image-alignment-300x200",
  },
  Object {
    "id": 1027,
    "link": "https://test.frontity.io/2012/template-featured-image-vertical/featured-image-vertical-2/",
    "slug": "featured-image-vertical-2",
  },
  Object {
    "id": 1029,
    "link": "https://test.frontity.io/2013/markup-image-alignment/image-alignment-1200x4002/",
    "slug": "image-alignment-1200x4002",
  },
  Object {
    "id": 1045,
    "link": "https://test.frontity.io/2010/post-format-image/unicorn-wallpaper/",
    "slug": "unicorn-wallpaper",
  },
  Object {
    "id": 1628,
    "link": "https://test.frontity.io/2010/post-format-image-caption/triforce-wallpaper/",
    "slug": "triforce-wallpaper",
  },
  Object {
    "id": 1686,
    "link": "https://test.frontity.io/dsc20040724_152504_532/",
    "slug": "dsc20040724_152504_532",
  },
  Object {
    "id": 1687,
    "link": "https://test.frontity.io/dsc20050604_133440_34211/",
    "slug": "dsc20050604_133440_34211",
  },
  Object {
    "id": 1691,
    "link": "https://test.frontity.io/2010/post-format-gallery/dsc20050315_145007_132-2/",
    "slug": "dsc20050315_145007_132-2",
  },
  Object {
    "id": 1692,
    "link": "https://test.frontity.io/about/clearing-floats/spectacles-2/",
    "slug": "spectacles-2",
  },
]
`;

exports[`fetch get two pages of post archive 1`] = `
Array [
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 1,
        "search": undefined,
      },
    },
  ],
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 2,
        "search": undefined,
      },
    },
  ],
]
`;

exports[`fetch get two pages of post archive 2`] = `
Object {
  "/": Object {
    "isArchive": true,
    "isFetching": false,
    "isHome": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": true,
    "pages": Array [
      Array [
        Object {
          "id": 1801,
          "link": "https://test.frontity.io/2018/block-image/",
          "type": "post",
        },
        Object {
          "id": 1798,
          "link": "https://test.frontity.io/2018/block-button/",
          "type": "post",
        },
        Object {
          "id": 1797,
          "link": "https://test.frontity.io/2018/block-cover/",
          "type": "post",
        },
        Object {
          "id": 1796,
          "link": "https://test.frontity.io/2018/column-blocks/",
          "type": "post",
        },
        Object {
          "id": 1800,
          "link": "https://test.frontity.io/2018/block-gallery/",
          "type": "post",
        },
        Object {
          "id": 1799,
          "link": "https://test.frontity.io/2018/block-quotes/",
          "type": "post",
        },
        Object {
          "id": 1786,
          "link": "https://test.frontity.io/2018/block-category-common/",
          "type": "post",
        },
        Object {
          "id": 1789,
          "link": "https://test.frontity.io/2018/blocks-embeds/",
          "type": "post",
        },
        Object {
          "id": 1795,
          "link": "https://test.frontity.io/2018/blocks-widgets/",
          "type": "post",
        },
        Object {
          "id": 1788,
          "link": "https://test.frontity.io/2018/blocks-layout-elements/",
          "type": "post",
        },
      ],
      Array [
        Object {
          "id": 1787,
          "link": "https://test.frontity.io/2018/blocks-formatting/",
          "type": "post",
        },
        Object {
          "id": 1724,
          "link": "https://test.frontity.io/2018/keyboard-navigation/",
          "type": "post",
        },
        Object {
          "id": 60,
          "link": "https://test.frontity.io/2016/the-beauties-of-gullfoss/",
          "type": "post",
        },
        Object {
          "id": 57,
          "link": "https://test.frontity.io/2016/shinjuku-gyoen-national-garden/",
          "type": "post",
        },
        Object {
          "id": 54,
          "link": "https://test.frontity.io/2016/lower-antelope-canyon/",
          "type": "post",
        },
        Object {
          "id": 51,
          "link": "https://test.frontity.io/2016/sunrise-at-phu-quoc-island/",
          "type": "post",
        },
        Object {
          "id": 46,
          "link": "https://test.frontity.io/2016/small-and-picturesque-french-villages/",
          "type": "post",
        },
        Object {
          "id": 42,
          "link": "https://test.frontity.io/2016/kebumen/",
          "type": "post",
        },
        Object {
          "id": 36,
          "link": "https://test.frontity.io/2016/banff-national-park/",
          "type": "post",
        },
        Object {
          "id": 33,
          "link": "https://test.frontity.io/2016/the-al-hajar-mountains/",
          "type": "post",
        },
      ],
    ],
    "total": 64,
    "totalPages": 7,
    "type": "post",
  },
}
`;
